tests/snapshots/run_wpt_conformance__trtx_mul_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul int32 4D tensors",
    "trtx",
    "PASS",
)
